--- a/src/app/main/layout/reports/service-staff-allocations/service-staff-allocations.component.html
+++ b/src/app/main/layout/reports/service-staff-allocations/service-staff-allocations.component.html
@@ -52,24 +52,31 @@
                                     <th>From</th>
                                     <th>To</th>
                                     <th>Vehicle</th>
-                                    <th>Driver1</th>
-                                    <th>Driver2</th>
-                                    <th>Cleaner</th>
-                                    <th>Conductor</th>
+                                    <th>Staff Details</th>
                                 </tr>
                                 </thead>
                                 <tbody>
                                 <tr *ngFor="let service of staffAllocationList; let i =index;">
                                     <td>{{i + 1}}</td>
-                                    <td>{{ service.serviceNumber || 'No ServiceNumber'}}</td>
-                                    <td>{{ service.busType }}</td>
-                                    <td>{{ service.from }}</td>
-                                    <td>{{ service.to }}</td>
-                                    <td>{{ service.vehicleRegNumber }}</td>
-                                    <td *ngFor="let s of service.staffDetails">
-                                        {{s.type === 'Driver'? s.name :s.type === 'DRIVER'? s.name: s.type === 'CLEANER'? s.name: s.type === 'CONDUCTOR'? s.name : 'NA'}} -
-                                        {{s.type === 'Driver'? s.contactNumber :s.type === 'DRIVER'? s.contactNumber: s.type === 'CLEANER'? s.contactNumber: s.type === 'CONDUCTOR'? s.contactNumber : 'NA'}}
+                                    <td>{{ service.serviceNumber || '-----'}}</td>
+                                    <td>{{ service.busType || '-----'}}</td>
+                                    <td>{{ service.from || '-----' }}</td>
+                                    <td>{{ service.to || '-----'}}</td>
+                                    <td>{{ service.vehicleRegNumber || '-----' }}</td>
+                                    <td>
+                                        <ul>
+                                            <li *ngFor="let data of service.staffDetails"><b>{{data.type}}</b>&nbsp;&nbsp; - &nbsp;{{data.name || '-----'}}({{data.contactNumber}})
+                                            </li>
+                                        </ul>
                                     </td>
+<!--                                    <td *ngFor="let s of service.staffDetails">-->
+<!--                                        {{s.type === 'Driver'? s.name :s.type === 'DRIVER'? s.name: s.type === 'CLEANER' || s.type === 'Cleaner'? s.name: s.type === 'CONDUCTOR'? s.name : 'NA'}} - -->
+<!--                                        {{s.type === 'Driver'? s.contactNumber :s.type === 'DRIVER'? s.contactNumber: s.type === 'CLEANER'? s.contactNumber: s.type === 'CONDUCTOR'? s.contactNumber : 'NA'}}-->
+<!--                                    </td>-->
+<!--                                    <td>{{service.driverOne || '&#45;&#45;'}}</td>-->
+<!--                                    <td>{{service.driverTwo || '&#45;&#45;'}}</td>-->
+<!--                                    <td>{{service.cleanerName || '&#45;&#45;'}}</td>-->
+<!--                                    <td>{{service.conductorName || '&#45;&#45;'}}</td>-->
                                 <tr *ngIf="!staffAllocationList || staffAllocationList.length === 0">
                                     <td colspan="10">No reports exist. </td>
                                 </tr>
