--- a/src/app/main/layout/reports/service-staff-allocations/service-staff-allocations.component.html
+++ b/src/app/main/layout/reports/service-staff-allocations/service-staff-allocations.component.html
@@ -19,6 +19,11 @@
                     <div class="row form-group">
                         <div class="col-sm-3">
                             <div class="input-group">
+                                <div class="input-group-append">
+                                    <button class="btn btn-sm btn-default" (click)="previousDate()">
+                                        <i class="fa fa-arrow-left"></i>
+                                    </button>
+                                </div>
                                 <input class="form-control form-control-sm"
                                        placeholder=""
                                        name="permit"
@@ -33,6 +38,11 @@
                                             (click)="dt.show()"
                                             [attr.aria-expanded]="dt.isOpen" type="button">
                                         <i class="fa fa-calendar"></i>
+                                    </button>
+                                </div>
+                                <div class="input-group-append">
+                                    <button class="btn btn-sm btn-default" (click)="nextDate()">
+                                        <i class="fa fa-arrow-right"></i>
                                     </button>
                                 </div>
                             </div>
