--- a/src/app/main/layout/reports/shared/service-report/service-report.component.html
+++ b/src/app/main/layout/reports/shared/service-report/service-report.component.html
@@ -483,7 +483,7 @@
                                             <td>
                                                 <input type="text" placeholder="expense name"
                                                        class="form-control form-control-sm"
-                                                       [(ngModel)]="expense.salary"
+                                                       [(ngModel)]="expense.name"
                                                        [disabled]="isDisabled()" [ngModelOptions]="{standalone: true}"/>
                                             </td>
                                             <td>
