--- a/src/app/main/layout/master/vehicles/add-edit-vehicle/add-edit-vehicle.component.html
+++ b/src/app/main/layout/master/vehicles/add-edit-vehicle/add-edit-vehicle.component.html
@@ -147,6 +147,27 @@
                             </div>
 
                             <div class="col-sm-6 col-12 form-group">
+                                <label>AITP Expiry:</label>
+                                <div class="input-group"> {{vehicle.aitpExpiry}}
+                                    <input class="form-control form-control-sm"
+                                           placeholder="AITP Expiry Date"
+                                           name="auth"
+                                           [(ngModel)]="vehicle.aitpExpiry"
+                                           [minDate]="newDate"
+                                           [ngModelOptions]="{standalone: true}"
+                                           bsDatepicker
+                                           #aitpExpiry="bsDatepicker"
+                                           [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD', isAnimated: true }">
+                                    <div class="input-group-append">
+                                        <button class="btn btn-light btn-sm" style="border: 1px solid #ced4da;"
+                                                (click)="aitpExpiry.show()"
+                                                [attr.aria-expanded]="aitpExpiry.isOpen" type="button">
+                                            <i class="fa fa-calendar"></i>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 col-12 form-group">
                                 <label>Chasis Number:</label>
                                 <input type="text" class="form-control form-control-sm"
                                        placeholder="Enter Chasis Number"
@@ -257,36 +278,6 @@
                             </div>
                             <div *ngIf="vehicleId" class="col-sm-12">
                                 <div class="row">
-                                    <div class="col-sm-6 col-12 form-group">
-                                        <label>Upload RC</label>
-                                        <app-file-upload [refId]="vehicleId" [url]="'api/v1/rcUpload/'"
-                                                         (imageToEmitToUpload)="uploadImage($event)"></app-file-upload>
-                                    </div>
-                                    <div class="col-sm-6 col-12 form-group">
-                                        <label>Upload FC</label>
-                                        <app-file-upload [refId]="vehicleId" [url]="'api/v1/fcUpload/'"
-                                                         (imageToEmitToUpload)="uploadImage($event)"></app-file-upload>
-                                    </div>
-                                    <div class="col-sm-6 col-12 form-group">
-                                        <label>Upload Permit</label>
-                                        <app-file-upload [refId]="vehicleId" [url]="'api/v1/permitUpload/'"
-                                                         (imageToEmitToUpload)="uploadImage($event)"></app-file-upload>
-                                    </div>
-                                    <div class="col-sm-6 col-12 form-group">
-                                        <label>Upload Auth</label>
-                                        <app-file-upload [refId]="vehicleId" [url]="'api/v1/authUpload/'"
-                                                         (imageToEmitToUpload)="uploadImage($event)"></app-file-upload>
-                                    </div>
-                                    <div class="col-sm-6 col-12 form-group">
-                                        <label>Upload Insurance</label>
-                                        <app-file-upload [refId]="vehicleId" [url]="'api/v1/insuranceUpload/'"
-                                                         (imageToEmitToUpload)="uploadImage($event)"></app-file-upload>
-                                    </div>
-                                    <div class="col-sm-6 col-12 form-group">
-                                        <label>Upload Pollution</label>
-                                        <app-file-upload [refId]="vehicleId" [url]="'api/v1/pollutionUpload/'"
-                                                         (imageToEmitToUpload)="uploadImage($event)"></app-file-upload>
-                                    </div>
                                     <div class="col-sm-6 col-12 form-group">
                                         <app-files-upload [refId]="vehicleId" [type]="'Vehicle'"></app-files-upload>
                                     </div>
