Pushing the cash collection changes

--- a/src/app/main/layout/reports/cash-collection-reports/cash-collection-reports.component.html
+++ b/src/app/main/layout/reports/cash-collection-reports/cash-collection-reports.component.html
@@ -86,7 +86,8 @@
                                     </tbody>
                                 </table>
                             </div>
-                            <!--div class="col-sm-5 table-responsive">
+                            <!--
+                                   div class="col-sm-5 table-responsive">
                                 <table class="table table-bordered table-hover text-center">
                                     <thead>
                                     <tr>
