--- a/src/app/main/layout/layout.component.html
+++ b/src/app/main/layout/layout.component.html
@@ -253,7 +253,7 @@
                         </a>
                     </li>
                     <li class="waves-effect waves-light">
-                        <a class="treeView-item" [routerLink]="['officeExpenses']" [routerLinkActive]="['active']">
+                        <a class="treeView-item" [routerLink]="['officeExpenses/' + + apiService.newDate]" [routerLinkActive]="['active']">
                             <i class="icon fa fa-product-hunt" aria-hidden="true"></i>Office Expenses
                         </a>
                     </li>
