--- a/src/app/main/layout/reports/office-expenses/office-expenses.component.html
+++ b/src/app/main/layout/reports/office-expenses/office-expenses.component.html
@@ -22,6 +22,9 @@
         <li class="nav-item disabled-tab-nav" (click)="changeOfficeExpenseTab(4)">
             <a class="nav-link" [ngClass]="{active:tab==4}">Pay Later</a>
         </li>
+        <li class="nav-item disabled-tab-nav" (click)="changeOfficeExpenseTab(5)">
+            <a class="nav-link" [ngClass]="{active:tab==5}">By Date</a>
+        </li>
     </ul>
     <div class="row">
         <div class="col-lg-12 col-md-12" *ngIf="tab === 1">
@@ -705,7 +708,111 @@
                 </div>
             </div>
         </div>
-
+        <div class="col-lg-12 col-md-12" *ngIf="tab === 5">
+            <div class="tile">
+                <div class="tile-body">
+                    <div class="dataTables_wrapper container-fluid dt-bootstrap4 no-footer">
+                        <div class="row form-group">
+                            <div class="col-sm-3">
+                                <div class="input-group">
+                                    <div class="input-group-append">
+                                        <button class="btn btn-sm btn-default" (click)="previousDate()">
+                                            <i class="fa fa-arrow-left"></i>
+                                        </button>
+                                    </div>
+                                    <input class="form-control form-control-sm"
+                                           placeholder=""
+                                           name="permit"
+                                           [(ngModel)]="currentDate"
+                                           [ngModelOptions]="{standalone: true}"
+                                           (ngModelChange)="officeExpenseSearchByDate()"
+                                           bsDatepicker
+                                           #dt="bsDatepicker"
+                                           [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD', isAnimated: true}">
+                                    <div class="input-group-append">
+                                        <button class="btn btn-light btn-sm" style="border: 1px solid #ced4da;"
+                                                (click)="dt.show()"
+                                                [attr.aria-expanded]="dt.isOpen" type="button">
+                                            <i class="fa fa-calendar"></i>
+                                        </button>
+                                    </div>
+                                    <div class="input-group-append">
+                                        <button class="btn btn-sm btn-default" (click)="nextDate()">
+                                            <i class="fa fa-arrow-right"></i>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-3"></div>
+                            <div class="col-sm-6 p-0">
+                                <div class="toolbar-button-div pull-right">
+                                    <button type="button" class="btn btn-sm btn-primary pull-right " (click)="exportToExcelByDate()">Export To Excel
+                                    </button>&nbsp;&nbsp;
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-12 pl-0 pr-0 table-responsive">
+                                <table class="table table-hover dataTable text-center" id="exportToExcelByDate">
+                                    <thead>
+                                    <tr class="table-bordered">
+                                        <th>S.No</th>
+                                        <th scope="col" [appFrentendSort]="byDateList"
+                                            data-order="desc" data-name="date">Date</th>
+                                        <th scope="col" [appFrentendSort]="byDateList"
+                                            data-order="desc" data-name="createdAt">Created On</th>
+                                        <th scope="col" [appFrentendSort]="byDateList"
+                                            data-order="desc" data-name="description">Description</th>
+                                        <th scope="col" [appFrentendSort]="byDateList"
+                                            data-order="desc" data-name="expenseType">Type</th>
+                                        <th scope="col" [appFrentendSort]="byDateList"
+                                            data-order="desc" data-name="attrs.vehicle">Vehicle</th>
+                                        <th scope="col" [appFrentendSort]="byDateList"
+                                            data-order="desc" data-name="fromDate">From Date</th>
+                                        <th scope="col" [appFrentendSort]="byDateList"
+                                            data-order="desc" data-name="toDate">To Date</th>
+                                        <th scope="col" [appFrentendSort]="byDateList"
+                                            data-order="desc" data-name="attrs.createdBy">Created By</th>
+                                        <th>Amount</th>
+                                        <th>Status</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr *ngFor="let data of byDateList; let i = index">
+                                        <td>{{i + 1}}</td>
+                                        <td>{{data.date | date}}</td>
+                                        <td>{{data.createdAt | date}}</td>
+                                        <td>{{data.description || 'NA'}}</td>
+                                        <td>{{data.expenseType || 'NA'}}</td>
+                                        <td>{{data.attrs.vehicle || 'NA'}}</td>
+                                        <td>{{data.fromDate | date}}</td>
+                                        <td>{{data.toDate | date}}</td>
+                                        <td>{{data.attrs.createdBy || 'NA'}}</td>
+                                        <td>{{data.amount.toFixed(2)}}</td>
+                                        <td>
+                                            {{data.status || 'NA'}}
+                                        </td>
+                                    </tr>
+                                    <tr *ngIf="byDateList.length === 0 || !byDateList">
+                                        <td colspan="12">No RecordsExists</td>
+                                    </tr>
+                                    </tbody>
+                                    <tfoot>
+                                    <tr *ngIf="byDateList.length != 0 || byDateList.length">
+                                        <th colspan="12">
+                                            <div class="pull-right">
+                                                Total Count : {{byDateList.length || 0}}
+                                            </div>
+                                        </th>
+                                    </tr>
+                                    </tfoot>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <ng-template #viewImageModal let-c="close" let-d="dismiss">
