--- a/src/app/main/layout/cargo/view-cargo-booking/view-cargo-booking.component.html
+++ b/src/app/main/layout/cargo/view-cargo-booking/view-cargo-booking.component.html
@@ -82,6 +82,9 @@
                             <div class="col-sm-4 col-12 form-group">
                                 <label>Status:</label>
                                 <div>{{cargoDetails.cargoTransitStatus}}</div>
+                                <span *ngIf="cargoDetails.cargoTransitStatus === 'DELIVERED'">
+                                    <label>Delivered by : {{cargoDetails.deliveredBy}} on {{cargoDetails.deliveredOn| date: "medium"}} - {{cargoDetails.deliveryNotes}}</label>
+                                </span>
                             </div>
                         </div>
                         <div class="row">
@@ -179,6 +182,9 @@
                         <div class="col-sm-12 text-left" *ngIf="cargoDetails.attrs.SMS">
                             <label>SMS:</label>
                             <div>{{cargoDetails.attrs.SMS || '--'}}</div>
+                        </div>
+                        <div class="col-sm-12 text-left" *ngIf="cargoDetails.cargoTransitStatus === 'DELIVERED' ">
+                            <b>Delivered by : {{cargoDetails.deliveredBy}} on {{cargoDetails.deliveredOn| date: "medium"}} - {{cargoDetails.deliveryNotes}}</b>
                         </div>
                         <div class="col-sm-12 mt-3 mb-3">
                             <div class="pull-left">
@@ -411,7 +417,7 @@
                         <b>{{cargoDetails.attrs.toBranchOfficeAddress}}</b>
                     </td>
                     <td style="border: 1px solid #ccc;padding-left: 5px;"><label class="control-label">Date:</label>&nbsp;
-                        <b>{{cargoDetails.dispatchDate | date}}</b></td>
+                        <b>{{cargoDetails.dispatchDate | date: "medium"}}</b></td>
                 </tr>
                 <tr>
                     <td style="border: 1px solid #ccc;padding-left: 5px;"><label class="control-label">LR Type:</label>&nbsp;
