--- a/src/app/main/layout/master/vehicles/add-edit-vehicle/add-edit-vehicle.component.html
+++ b/src/app/main/layout/master/vehicles/add-edit-vehicle/add-edit-vehicle.component.html
@@ -148,7 +148,7 @@
 
                             <div class="col-sm-6 col-12 form-group">
                                 <label>AITP Expiry:</label>
-                                <div class="input-group"> {{vehicle.aitpExpiry}}
+                                <div class="input-group">
                                     <input class="form-control form-control-sm"
                                            placeholder="AITP Expiry Date"
                                            name="auth"
